Add config for testing

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 URL_MONGO=<url Mongo server>
 URL_MONGO_TEST=<urk Mongo server testing>
 SECRET=<Secreto para jwt>
+SONAR_TOKEN=<El secreto de sonar>
