--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,9 +3,9 @@ sonar.organization=isdi-coders-2022
 
 sonar.sources=./src
 
-sonar.test.inclusions=src//*.test.*
+sonar.test.inclusions=src//*.test.*, src//*.spec.*
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=src/index.js, src//*.test.*, src/server/initializeServer.js, src/db/index.js, src/mocks//*.js
+sonar.coverage.exclusions=src/index.js, src//*.test.*, src//*.spec.*, src/server/initializeServer.js, src/db/index.js, src/mocks//*.js
 sonar.scm.provider=git
 sonar.cpd.exclusions=src/mocks/**.js
