Change bracn from master to main

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,7 +2,7 @@ name: Sonar Scanner
 on:
     push:
         branches:
-            - master
+            - main
 jobs:
     sonarcloud:
         name: SonarCloud
