Adding configuration on sonar project

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -14,7 +14,7 @@ jobs:
             - name: Install modules
               run: npm ci
             - name: Testing coverage
-              run: npm run test:cov --watchAll=false
+              run: npm run test:cov
               env:
                   SECRET: ${{ secrets.SECRET }}
             - name: SonarCloud Scan
