Add configuration to deploy backend on heroku

--- a/package.json
+++ b/package.json
@@ -76,5 +76,8 @@
         ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
+    },
+    "engines": {
+        "node":"16.15.0"
     }
 }
